--- a/0x00-Webpack/task_1/public/index.html
+++ b/0x00-Webpack/task_1/public/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
   <!-- Webpack will inject the script here -->
-  <script src="bundle.js"></script>
+  <script type="text/javascript" src="bundle.js"></script>
 </body>
 </html>
